@@ -592,12 +592,41 @@ void BX_CPU_C::init_vmx_capabilities(void)
     cap->vmx_vmentry_ctrl_supported_bits |= VMX_VMENTRY_CTRL1_LOAD_EFER_MSR;
 #endif
 
+#if BX_SUPPORT_VMX >= 2
+
+  // EPT/VPID capabilities
+  // -----------------------------------------------------------
+  //  [0] - BX_EPT_ENTRY_EXECUTE_ONLY support
+  //  [6] - 4-levels EPT page walk length
+  //  [8] - allow UC EPT paging structure memory type
+  // [14] - allow WB EPT paging structure memory type
+  // [16] - EPT 2M pages support
+  // [17] - EPT 1G pages support
+  // [20] - INVEPT instruction supported
+  // [21] - EPT A/D bits supported
+  // [25] - INVEPT single-context invalidation supported
+  // [26] - INVEPT all-context invalidation supported
+  // [32] - INVVPID instruction supported
+  // [40] - individual-address INVVPID is supported
+  // [41] - single-context INVVPID is supported
+  // [42] - all-context INVVPID is supported
+  // [43] - single-context-retaining-globals INVVPID is supported
+
+  if (BX_SUPPORT_VMX_EXTENSION(BX_VMX_EPT)) {
+    cap->vmx_ept_vpid_cap_supported_bits = BX_CONST64(0x06114141);
+    if (bx_cpuid_support_1g_paging())
+      cap->vmx_ept_vpid_cap_supported_bits |= (1 << 17);
+    if (BX_SUPPORT_VMX_EXTENSION(BX_VMX_EPT_ACCESS_DIRTY))
+      cap->vmx_ept_vpid_cap_supported_bits |= (1 << 21);
+  }
+  if (BX_SUPPORT_VMX_EXTENSION(BX_VMX_VPID))
+    cap->vmx_ept_vpid_cap_supported_bits |= BX_CONST64(0x00000f01) << 32;
+
   // vm functions
   // -----------------------------------------------------------
   //    [00] EPTP switching
   // [63-01] reserved
 
-#if BX_SUPPORT_VMX >= 2
   cap->vmx_vmfunc_supported_bits = 0;
 
   if (BX_SUPPORT_VMX_EXTENSION(BX_VMX_EPTP_SWITCHING))
@@ -606,6 +635,7 @@ void BX_CPU_C::init_vmx_capabilities(void)
   // enable vm functions secondary vmexec control if needed
   if (cap->vmx_vmfunc_supported_bits != 0)
     cap->vmx_vmexec_ctrl2_supported_bits |= VMX_VM_EXEC_CTRL3_VMFUNC_ENABLE;
+
 #endif
 }
 
