@@ -1,6 +1,9 @@
 Changes after 2.5.1 release:
 
 - CPU
+  - Implemented EPT A/D extensions support.
+    Bochs is fully aligned with the latest published revision of
+    Intel Architecture Manual (revision 043) now.
   - Another 10% CPU emulation speedup with even more optimal lazy flags
     handling and stack access optimizations
   - Support for AMD's SVM hardware emulation in Bochs CPU, to enable
@@ -16,7 +19,7 @@ Changes after 2.5.1 release:
   - Implemented new debugger command 'info device [string]' that shows the
     state of the device specified in 'string'
   - Improved debug dump for ne2k, pci, pic and vga/cirrus devices. Added
-    debug dump for pci2isa, i/o apic, floppy and dma controller devices.
+    debug dump for pci2isa, i/o apic, pit, floppy and dma controller devices.
   - Added TLB to CPU param tree - now it can be browsed from Bochs internal
     debugger and Bochs debugger GUI through param tree interfaces
   - Implemented 'writemem' debugger command to dump virtual memory block
